--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "",
     "description": "Enter desription here",
     "homepage": "",
-    "license": "",
+    "license": "UNLICENSED",
     "repository": {
         "type": "git",
         "url": "https://github.com/holylandman/cesium-starter-app"
